--- a/src/store/templates/store/home.html
+++ b/src/store/templates/store/home.html
@@ -2,13 +2,12 @@
 {% load static %}
 
 {% block title %}
-  Bookstore
+Bookstore
 {% endblock %}
 
 {% block content %}
 <div class="indicator hero min-h-screen"
-  style="background-image: url(https://img.daisyui.com/images/stock/photo-1507358522600-9f71e620c44e.webp);">
-  <div class="hero-overlay"></div>
+  style="background-image: url({{background.video.url}});">
   <div class="hero-content text-neutral-content text-center flex-col">
     <div class="max-w-full">
       <h1 class="mb-5 font-bold text-2xl md:text-5xl sm:text-3xl">Search, Read, Buy, Review</h1>
@@ -30,22 +29,24 @@
 
 <h1 class="text-3xl text-center p-4">All books</h1>
 
-<section class="rounded-4xl bg-base-200 grid p-8 place-content-center gap-2">
-  {% for p in product %}
-  <div class="card bg-base-100 w-96 shadow-sm">
-    <figure class="px-10 pt-10">
-      <img src="{{ p.image.url }}" alt="Shoes" class="rounded-xl" />
-    </figure>
-    <div class="card-body items-center text-center">
+<section class="w-full rounded-4xl bg-base-200">
+  <div class="p-8 justify-center gap-4 flex flex-wrap">
+    {% for p in product %}
+    <div class="card bg-base-100 justify-center w-96 shadow-sm">
+      <figure class="px-10 pt-10">
+        <img src="{{ p.image.url }}" alt="Shoes" class="rounded-xl" />
+      </figure>
+      <div class="card-body items-center text-center">
         <h2 class="card-title"><a href="{{ p.get_absolute_url }}">{{ p.title|title }}</a></h2>
-      <p>{{ p.description }}</p>
-      <div class="card-actions justify-center">
-        <a href="" class="badge badge-outline badge-success my-2">
-          {{ p.category }}
-        </a>
+        <p>{{ p.description }}</p>
+        <div class="card-actions justify-center">
+          <a href="" class="badge badge-outline badge-success my-2">
+            {{ p.category }}
+          </a>
+        </div>
       </div>
     </div>
+    {% endfor %}
   </div>
-  {% endfor %}
 </section>
 {% endblock %}
