--- a/src/store/templates/store/products/detail.html
+++ b/src/store/templates/store/products/detail.html
@@ -7,7 +7,7 @@
 
 {% block content %}
 <div class="hero bg-base-200 min-h-screen">
-  <div class="hero-content flex-col-reverse md:flex-row">
+  <div class="hero-content">
     <div class="card bg-base-100 sm:w-xl w-auto shadow-sm">
       <figure>
         <img src="{{ product.image.url }}" alt="{{ product.slug }}">
