--- a/src/store/templates/store/products/single.html
+++ b/src/store/templates/store/products/single.html
@@ -23,22 +23,43 @@
         <span class="badge badge-success text-base badge-outline">{{ product.author }}</span>
         <p>{{ product.description }}</p>
         <div class="flex justify-between">
-          <div class="btn sm:w-sm w-auto btn-secondary">
+          <button id="button-add" value="{{ product.id }}" class="btn sm:w-sm w-auto btn-secondary">
             Add to Cart
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
             </svg>
-          </div>
-          <select class="select select-info focus:outline-none w-fit">
-            <option disabled selected>Quantity</option>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
+          </button>
+          <select id="select" class="select select-info focus:outline-none w-fit">
+            <option value=1>1</option>
+            <option value=2>2</option>
+            <option value=3>3</option>
+            <option value=4>4</option>
           </select>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<script>
+  $(document).on('click', '#button-add', function (e) {
+    e.preventDefault();
+    $.ajax({
+      type: 'POST',
+      url: '{% url "basket:basket_add" %}',
+      data: {
+        productid: $('#button-add').val(),
+        productqty: $('#select option:selected').text(),
+        csrfmiddlewaretoken: "{{ csrf_token }}",
+        action: 'post'
+      },
+      success: function (json) {
+        document.getElementById('qty-basket').innerHTML = json.qty || 0;
+      },
+      error: function (xhr, errmsg, err) { }
+    });
+  })
+</script>
 {% endblock %}
