--- a/src/basket/templates/basket/summary.html
+++ b/src/basket/templates/basket/summary.html
@@ -2,9 +2,63 @@
 {% load static %}
 
 {% block title %}
-Basket
+Basket Summary
 {% endblock %}
 
 {% block content %}
-<h1 class="accent-sandstone-600 text-2xl text-center">Basket homepage</h1>
+<section class="md:mx-20 mx-auto my-5">
+  <div class="overflow-x-auto rounded-box border-2 border-base-100/50 bg-base-200">
+    <table class="table">
+      <!--Head-->
+      <thead>
+        <tr>
+          <th>Image</th>
+          <th>Product</th>
+          <th>Price</th>
+        </tr>
+      </thead>
+      <!--Body-->
+      <tbody>
+        <!--Row 1-->
+        {% for item in basket %}
+        {% with product=item.product %}
+        <tr>
+          <td class="md:visible">
+            <figure>
+              <img src="{{ product.image.url }}" alt="{{ product.slug }}">
+            </figure>
+          </td>
+          <td class="grid grid-cols-1 gap-2">
+            <div class="md:items-center">
+              <h1 class="sm:flex-row sm:items-center flex-col items-start card-title font-bold text-xl">
+                {{ product.title|title }}
+                <span class="badge badge-accent text-[10px]">{{ product.category }}</span>
+              </h1>
+            </div>
+            <span class="badge badge-success text-base badge-outline">{{ product.author }}</span>
+            <p>{{ product.description }}</p>
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-row gap-2">
+                <button class="btn btn-outline btn-secondary">Update</button>
+                <button class="btn btn-link">Delete</button>
+              </div>
+              <select id="select" class="select select-info focus:outline-none w-fit">
+                <option selected>{{ item.qty }}</option>
+                <option value=1>1</option>
+                <option value=2>2</option>
+                <option value=3>3</option>
+                <option value=4>4</option>
+              </select>
+            </div>
+          </td>
+          <td>
+            <span class="text-xl">${{ item.total_price }}</span>
+          </td>
+        </tr>
+        {% endwith %}
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</section>
 {% endblock %}
