--- a/src/basket/templates/basket/summary.html
+++ b/src/basket/templates/basket/summary.html
@@ -39,11 +39,12 @@ Basket Summary
             <p>{{ product.description }}</p>
             <div class="flex flex-row justify-between">
               <div class="flex flex-row gap-2">
-                <button class="btn btn-outline btn-secondary" id="update-button">Update</button>
+                <button class="btn btn-outline btn-secondary update-button" data-index="{{ product.id }}"
+                  id="update-button">Update</button>
                 <button class="btn btn-link delete-button" id="delete-button"
                   data-index="{{ product.id }}">Delete</button>
               </div>
-              <select id="select" class="select select-info focus:outline-none w-fit">
+              <select id="select{{product.id}}" class="select select-info focus:outline-none w-fit">
                 <option selected>{{ item.qty }}</option>
                 <option value=1>1</option>
                 <option value=2>2</option>
@@ -61,7 +62,7 @@ Basket Summary
         <tr class="border-t-2 border-base">
           <td></td>
           <td class="text-xl border-r-2 border-base">Total</td>
-          <td class="text-xl">${{ basket.get_total_price }}</td>
+          <td class="text-xl" id="subtotal">${{ basket.get_total_price }}</td>
         </tr>
       </tbody>
     </table>
@@ -73,6 +74,7 @@ Basket Summary
           remains unaffected and needs page to be refreshed to show the actual price.
           Use ajax to solve this.-->
 <script>
+  //delete item
   $(document).on('click', '.delete-button', function (e) {
     e.preventDefault();
     var prod_id = $(this).data('index');
@@ -87,9 +89,33 @@ Basket Summary
       success: function (json) {
         console.log(prod_id)
         $('.product-item[data-index="' + prod_id + '"]').remove();
+        document.getElementById("qty-basket").innerHTML = json.qty
+        document.getElementById("subtotal").innerHTML = json.subtotal
       },
       error: function (xhr, errmsg, err) { }
     });
   })
+
+  // update item
+  $(document).on('click', '.update-button', function (e) {
+    e.preventDefault();
+    var prod_id = $(this).data('index');
+    $.ajax({
+      type: 'POST',
+      url: '{% url "basket:basket_update" %}',
+      data: {
+        productid: $(this).data('index'),
+        productqty: $('#select' + prod_id + ' option:selected').text(),
+        csrfmiddlewaretoken: "{{ csrf_token }}",
+        action: 'post'
+      },
+      success: function (json) {
+        document.getElementById("qty-basket").innerHTML = json.qty
+        document.getElementById("subtotal").innerHTML = json.subtotal
+      },
+      error: function (xhr, errmsg, err) { }
+    });
+  })
+
 </script>
 {% endblock %}
