--- a/src/account/templates/account/user/dashboard.html
+++ b/src/account/templates/account/user/dashboard.html
@@ -11,7 +11,7 @@ Dashboard
       <h1 class="md:text-4xl text-2xl text-bold">Your Dashboard</h1>
       <div class="flex justify-between flex-wrap">
         <p>Manage your <b>orders</b> and personal details.</p>
-        <a href="#" class="link-neutral border-b-1 border-neutral">change details</a>
+        <a href="{% url 'account:edit_details' %}" class="link-neutral border-b-1 border-neutral">change details</a>
       </div>
     </div>
   </div>
