style: :lipstick: show error message

--- a/src/payment/templates/payment/response_failure.html
+++ b/src/payment/templates/payment/response_failure.html
@@ -5,5 +5,5 @@ Payment - Failed
 {% endblock %}
 
 {% block content %}
-<h1>Something to do with the response: {{ error }}</h1>
+<h1>Response Failure: {{ error }}</h1>
 {% endblock %}
