feat(webhooks): :sparkles: handle webhooks requests

--- a/src/account/templates/account/registration/register.html
+++ b/src/account/templates/account/registration/register.html
@@ -7,6 +7,17 @@ Register
 <section class="flex items-center w-full justify-center h-[90vh]">
   <form class="fieldset bg-base-200 border-base-300 rounded-box lg:w-xl w-auto border p-4" method="POST">
     {% csrf_token %}
+
+    {% if form.errors %}
+    <div role="alert" class="alert alert-error alert-soft">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 shrink-0 stroke-current" fill="none" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+      </svg>
+      <span>{{ form.errors }}</span>
+    </div>
+    {% endif %}
+
     <fieldset class="fieldset">
       <label for="{{ form.user_name.id_for_label }}" class="label">{{ form.user_name.label }}</label>
       {{ form.user_name }}
