--- a/src/basket/templates/basket/summary.html
+++ b/src/basket/templates/basket/summary.html
@@ -8,6 +8,11 @@ Basket Summary
 {% block content %}
 <section class="md:mx-20 mx-auto my-5">
   <div class="overflow-x-auto rounded-box border-2 border-base-100/50 bg-base-200">
+    {% if basket|length == 0 %}
+    <div class="text-center">
+      Your basket is empty!
+    </div>
+    {% else %}
     <table class="table">
       <!--Head-->
       <thead class="md:table-header-group hidden">
@@ -71,6 +76,7 @@ Basket Summary
         class="rounded-box rounded-tl-none rounded-bl-none rounded-tr-none btn btn-success md:min-w-xl">Checkout <span
           class="material-symbols-outlined">payments</span></a>
     </div>
+    {% endif %}
   </div>
 </section>
 
