--- a/src/store/templates/store/index.html
+++ b/src/store/templates/store/index.html
@@ -14,7 +14,9 @@ Bookstore
         Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
         quasi. In deleniti eaque aut repudiandae et a id nisi.
       </p>
+      {% if not user.is_authenticated %}
       <button class="btn btn-primary">Create an Account <i>&#xf0004</i></button>
+      {% endif %}
     </div>
     <div class="mt-2">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
@@ -30,7 +32,7 @@ Bookstore
 
 <section class="w-full rounded-4xl bg-base-200">
   <div class="p-8 justify-center gap-4 flex flex-wrap">
-    {% if products %}
+    {% if product %}
     {% for p in product %}
     <div class="card bg-base-100 justify-center w-96 shadow-sm">
       <figure class="px-10 pt-10">
