--- a/src/store/templates/store/products/category.html
+++ b/src/store/templates/store/products/category.html
@@ -1,7 +1,7 @@
 {% extends "store/layout.html" %}
 
 {% block title %}
-  {{ block.super }} - {{ category.name }}
+{{ block.super }} - {{ category.name }}
 {% endblock %}
 
 {% block content %}
@@ -10,10 +10,14 @@
   {% for p in product %}
   <div class="card bg-base-200 w-96 shadow-sm">
     <figure class="px-10 pt-10">
-      <img src="{{ p.image.url }}" alt="Shoes" class="rounded-xl" />
+      {% for image in p.product_image.all %}
+      {% if image.is_feature %}
+      <img src="{{ image.image.url }}" alt="{{ image.alt_text }}">
+      {% endif %}
+      {% endfor %}
     </figure>
     <div class="card-body items-center text-center">
-        <h2 class="card-title"><a href="{{ p.get_absolute_url }}">{{ p.title|title }}</a></h2>
+      <h2 class="card-title"><a href="{{ p.get_absolute_url }}">{{ p.title|title }}</a></h2>
       <p>{{ p.description }}</p>
       <div class="card-actions justify-center">
         <a href="" class="badge badge-outline badge-success my-2">
