--- a/src/store/templates/store/products/single.html
+++ b/src/store/templates/store/products/single.html
@@ -10,7 +10,11 @@
   <div class="hero-content">
     <div class="card bg-base-100 sm:w-xl w-auto shadow-sm">
       <figure>
-        <img src="{{ product.image.url }}" alt="{{ product.slug }}">
+        {% for image in product.product_image.all %}
+        {% if image.is_feature %}
+        <img src="{{ image.image.url }}" alt="{{ image.alt_text }}">
+        {% endif %}
+        {% endfor %}
       </figure>
       <div class="card-body">
         <div class="flex md:items-center justify-between">
@@ -18,9 +22,8 @@
             {{ product.title|title }}
             <span class="badge badge-accent text-xs">{{ product.category }}</span>
           </h1>
-          <span class="text-xl">${{ product.price }}</span>
+          <span class="text-xl">${{ product.regular_price }}</span>
         </div>
-        <span class="badge badge-success text-base badge-outline">{{ product.author }}</span>
         <p>{{ product.description }}</p>
         <div class="flex justify-between">
           <button id="button-add" value="{{ product.id }}" class="btn sm:w-sm w-auto btn-secondary">
