--- a/src/account/templates/account/password_reset/password_reset_form.html
+++ b/src/account/templates/account/password_reset/password_reset_form.html
@@ -33,7 +33,9 @@ Password Reset
     </fieldset>
 
     <button class="btn btn-neutral mt-4" type="submit">Send E-mail</button>
+    {% if not user.is_authenticated %}
     <a href="{% url 'account:login' %}" class="text-center link-accent text-neutral">Login</a>
+    {% endif %}
   </form>
 </section>
 {% endblock %}
