--- a/src/store/templates/store/layout.html
+++ b/src/store/templates/store/layout.html
@@ -76,10 +76,29 @@
       </a>
 
       {% if user.is_authenticated %}
-      <form method="POST" action="{% url 'account:logout' %}">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-primary rounded-full">Logout</button>
-      </form>
+      <div class="dropdown dropdown-end">
+        <div tabindex="0" role="button" class="btn btn-ghost btn-circle avatar">
+          <div class="w-10 rounded-full">
+            <img alt="Tailwind CSS Navbar component"
+              src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+          </div>
+        </div>
+        <ul tabindex="-1" class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+          <li>
+            <a class="justify-between" href="{% url 'account:dashboard' %}">
+              Dashboard
+              <span class="badge">New</span>
+            </a>
+          </li>
+          <li><a href="{% url 'orders:orders' %}">Orders</a></li>
+          <li>
+            <form method="POST" action="{% url 'account:logout' %}">
+              {% csrf_token %}
+              <button type="submit" class="link link-primary font-bold rounded-full">Logout</button>
+            </form>
+          </li>
+        </ul>
+      </div>
       {% else %}
       <a class="btn btn-primary rounded-full" href="{% url 'account:login' %}">
         Login
