--- a/src/account/templates/account/dashboard/edit_details.html
+++ b/src/account/templates/account/dashboard/edit_details.html
@@ -53,5 +53,12 @@ Edit details
     <p>Are you sure you want to delete your account?</p>
     <button class="btn btn-error btn-soft mt-4" type="submit">Delete</button>
   </form>
+  <form class="fieldset bg-base-100 border-base-300 rounded-box lg:w-xl w-auto border p-4" method="POST"
+    action="{% url 'account:pwdreset' %}">
+    {% csrf_token %}
+    <h1 class="text-2xl">Reset your password</h1>
+    <p>Click on the below link to reset your password.</p>
+    <button class="btn btn-error btn-soft mt-4" type="submit">Reset Password</button>
+  </form>
 </section>
 {% endblock %}
