--- a/src/apps/store/templates/store/index.html
+++ b/src/apps/store/templates/store/index.html
@@ -9,13 +9,13 @@ Bookstore
 <div class="indicator hero min-h-screen" style="background-image: url({{background.video.url}});">
   <div class="hero-content text-neutral-content text-center flex-col">
     <div class="max-w-full">
-      <h1 class="mb-5 font-bold text-2xl md:text-5xl sm:text-3xl">Search, Read, Buy, Review</h1>
-      <p class="mb-5">
+      <h1 class="mb-5 font-bold text-2xl md:text-5xl sm:text-3xl text-neutral">Search, Read, Buy, Review</h1>
+      <p class="mb-5 text-neutral">
         Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
         quasi. In deleniti eaque aut repudiandae et a id nisi.
       </p>
       {% if not user.is_authenticated %}
-      <button class="btn btn-primary">Create an Account <i>&#xf0004</i></button>
+      <a class="btn btn-primary" href="{% url 'account:register' %}">Create an Account <i>&#xf0004</i></a>
       {% endif %}
     </div>
     <div class="mt-2">
@@ -51,7 +51,7 @@ Bookstore
           </a>
           <span>${{ p.regular_price }}</span>
         </h1>
-        <p class="line-clamp-5 text-white/50">{{ p.description }}</p>
+        <p class="line-clamp-5 text-neutral">{{ p.description }}</p>
         <div class="card-actions">
           <a href="" class="badge badge-outline badge-success my-2">
             {{ p.category }}
