--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,7 +1,7 @@
 {% load static tailwind_tags %}
 {% load static %}
 <!doctype html>
-<html lang="en" data-theme="synthwave">
+<html lang="en" data-theme="pastel">
 
 <head>
   <meta charset="UTF-8" />
